# Strategy-Game-Engine

./: CMakeLists.txt  a.out  main.cpp  readme.txt
headers/constants_and_enums/: constants.h  direction_enum.h
headers/game/: auxiliary_functions.cpp  auxiliary_functions.h  camera_view.cpp  camera_view.h  game.cpp  game.h
headers/maps/: avarayr_obstacles_layer_matrix.txt  maps.cpp  maps.h
headers/units/: dark_legioner.cpp  dark_legioner.h  soldier.cpp  soldier.h  unit.h
src/: enum_classes.h  game_pve.cpp  game_pve.h  utility.cpp  utility.h
src/units/: dark_legioner.cpp  dark_legioner.h  human.cpp  human.h  soldier.cpp  soldier.h  soldier_old.cpp  soldier_old.h  unit.h
src/world_map/: avarayr_bottom_layer_matrix.txt  default_bottom_matrix.txt  default_obstacles_matrix.txt  maps.cpp  maps.h
